Commit WIP files to continue work from Cloud9

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,1 +1,39 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <title>How Much Sugar Is In That Korean Snack? About Me</title>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
+  <link rel="stylesheet" href="../css/style.css">
+</head>
+
+<body>
+  <div class="container">
+    <!-- outer grid -->
+
+    <header class="header">
+      <h1>Hi, I'm Jungho.</h1>
+    </header>
+
+    <nav class="nav">
+      <div class="nav-content">
+        <a href="../../index.html">Back to Homepage</a>
+      </div>
+      <div class="nav-content">
+        <a href="#">Subscribe</a>
+      </div>
+    </nav>
+
+    <section class="circle">
+      <picture>
+        <img src="https://via.placeholder.com/300x300" alt="Jungho">
+      </picture>
+    </section>
+
+    
+    <footer class="footer">Footer</footer>
+  </div>
+</body>
+
+</html>
