--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="nav">
       <div class="nav-content">
-        <a href="/pages/about.html">About Me</a>
+        <a href="#">Subscribe</a>
       </div>
     </nav>
 
@@ -26,13 +26,13 @@
       <!-- flexbox -->
     
       <article class="g1 card">
-        <a href="#">
+        <a href="./src/pages/post_1.html">
           <picture>
             <img src="https://via.placeholder.com/300x300" alt="g1">
           </picture>
           <div class="card-content">
             <h2>Chocopie</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ac auctor augue mauris augue neque gravida in fermentum et. Tincidunt tortor aliquam nulla facilisi cras fermentum. Felis eget nunc lobortis mattis aliquam faucibus. Felis bibendum ut tristique et egestas quis ipsum suspendisse. Id neque aliquam vestibulum morbi blandit cursus. Placerat vestibulum lectus mauris ultrices. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Id interdum velit laoreet id donec. Porta non pulvinar neque laoreet suspendisse. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. Lacus luctus accumsan tortor posuere ac ut consequat semper. Amet nisl purus in mollis nunc sed id semper risus. Suspendisse interdum consectetur libero id.</p>
+            <p></p>
           </div>
         </a>
       </article>
@@ -77,7 +77,17 @@
     </section>
 
     
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+      <section class="author-picture">
+        <picture>
+          <img src="https://via.placeholder.com/300x300" alt="Jungho">
+        </picture>
+      </section>
+
+      <section class="author-info">
+
+      </section>
+    </footer>
   </div>
 </body>
 
