--- a/src/pages/post_1.html
+++ b/src/pages/post_1.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Jungho's Blob</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
-  <link rel="stylesheet" href="src/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
