Adding some style. WIP

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- outer grid -->
 
     <header class="header">
-      <h1>How much sugar is in that Korean snack? So delicious...</h1>
+      <h1>How much sugar is in that Korean snack? <span class="black">So delicious...</span></h1>
     </header>
 
     <nav class="nav">
@@ -28,11 +28,12 @@
       <article class="g1 card">
         <a href="./src/pages/post_1.html">
           <picture>
-            <img src="https://via.placeholder.com/300x300" alt="g1">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Chocolate_Pie.jpg" alt="Chocopie">
           </picture>
           <div class="card-content">
             <h2>Chocopie</h2>
-            <p></p>
+            <h3>Invented 1917; 103 years ago</h3>
+            <strong>Sugar 14g per pie</strong>
           </div>
         </a>
       </article>
@@ -84,8 +85,10 @@
         </picture>
       </section>
 
-      <section class="author-info">
-
+      <section class="author-info-container">
+        <div class="author-info-content">
+          <p>Jungho Kwon</p>
+        </div>
       </section>
     </footer>
   </div>
