--- a/index.html
+++ b/index.html
@@ -13,83 +13,87 @@
     <!-- outer grid -->
 
     <header class="header">
-      <h1>How much sugar is in that Korean snack? <span class="black">So delicious...</span></h1>
+      <a href="index.html"><h1>How much sugar is in that Korean snack? 
+        <span class="black">So delicious...</span></h1>
+      </a>  
     </header>
 
     <nav class="nav">
-      <div class="nav-content">
-        <a href="#">Subscribe</a>
-      </div>
+      <a href="#">
+        <div class="nav-content">
+          Subscribe  
+        </div>
+      </a>
     </nav>
 
     <section class="card-container">
       <!-- flexbox -->
     
-      <article class="g1 card">
-        <a href="./src/pages/post_1.html">
+      <article class="chocopie card">
+        <a href="./src/pages/post.html">
           <picture>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Chocolate_Pie.jpg" alt="Chocopie">
+            <img src="https://koreajoongangdaily.joins.com/jmnet/koreajoongangdaily/_data/photo/2018/10/07181346.jpg" alt="Chocopie">
           </picture>
           <div class="card-content">
             <h2>Chocopie</h2>
-            <h3>Invented 1917; 103 years ago</h3>
-            <strong>Sugar 14g per pie</strong>
+            <h3>Chocolate & Marshmellow</h3>
+            <strong>14g of Sugar per pie</strong>
           </div>
         </a>
       </article>
 
 
-      <article class="g2 card">
+      <article class="chocoheim card">
         <a href="#">
-          <picture class="thumbnail">
-            <img src="https://via.placeholder.com/300x300" alt="g1">
+          <picture>
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51deHAfw99L.jpg" alt="Choco Heim">
           </picture>
           <div class="card-content">
-            <h2>Chocopie</h2>
-            <p>Choco explanation.</p>
+            <h2>Choco Heim</h2>
+            <h3>Chocolate</h3>
+            <strong>11g of Sugar per serving</strong>
           </div>
         </a>
       </article>
 
-      <article class="g3 card">
+      <article class="mygummy card">
         <a href="#">
-          <picture class="thumbnail">
-            <img src="https://via.placeholder.com/300x300" alt="g1">
+          <picture>
+            <img src="https://ph-test-11.slatic.net/p/9fe8c1c1b989f459fbb63816abf3210e.jpg" alt="My Gummy">
           </picture>
           <div class="card-content">
-            <h2>Chocopie</h2>
-            <p>Choco explanation.</p>
+            <h2>MyGummy</h2>
+            <h3>Concord Grape Flavored</h3>
+            <strong>40g of Sugar per bag</strong>
           </div>
         </a>
       </article>
 
-      <article class="g4 card">
+      <article class="bananamilk card">
         <a href="#">
-          <picture class="thumbnail">
-            <img src="https://via.placeholder.com/300x300" alt="g1">
+          <picture>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Bananamilk.jpg" alt="Banana Milk">
           </picture>
           <div class="card-content">
-            <h2>Chocopie</h2>
-            <p>Choco explanation.</p>
+            <h2>Banana Milk</h2>
+            <h3>Banana Flavored</h3>
+            <strong>24g of Sugar per serving</strong>
           </div>
         </a>
       </article>
 
     </section>
 
-    
     <footer class="footer">
-      <section class="author-picture">
-        <picture>
-          <img src="https://via.placeholder.com/300x300" alt="Jungho">
-        </picture>
-      </section>
-
-      <section class="author-info-container">
-        <div class="author-info-content">
-          <p>Jungho Kwon</p>
-        </div>
-      </section>
+      <p>Learning frontend development, one project at a time!</p>
+      <br>
+      <p>This site was built using only HTML5 and CSS3.</p>
+      <br>
+      <div class="github-link">
+        <a href="https://github.com/kwoner61">
+          <img src="https://images.ctfassets.net/bx16dovk9m7p/1JXdLyzvL6kGMaIk2sksoq/a750b136ead15f190e0111c836e30a27/github-icon-logo-png-transparent.png">
+        </a>
+      </div>
     </footer>
   </div>
 </body>
