Add alternative text to image.

--- a/src/pages/post.html
+++ b/src/pages/post.html
@@ -73,8 +73,8 @@
       <p>This site was built using only HTML5 and CSS3.</p>
       <br>
       <div class="github-link">
-        <a href="https://github.com/kwoner61">
-          <img src="https://images.ctfassets.net/bx16dovk9m7p/1JXdLyzvL6kGMaIk2sksoq/a750b136ead15f190e0111c836e30a27/github-icon-logo-png-transparent.png">
+        <a href="https://github.com/kwoner61" role="presentation">
+          <img src="https://images.ctfassets.net/bx16dovk9m7p/1JXdLyzvL6kGMaIk2sksoq/a750b136ead15f190e0111c836e30a27/github-icon-logo-png-transparent.png" alt="Github logo">
         </a>
       </div>
     </footer>
